Cours 13/03/23 aprem - Fin v1 du site

--- a/WAMP/www/wd/SitePro/v1/index.html
+++ b/WAMP/www/wd/SitePro/v1/index.html
@@ -4,13 +4,13 @@
     <meta content="text/html; charset=utf-8" http-equiv="Content-type">
     <title>Mon site tout beau</title>
     <link href="css.css" type="text/css" rel="stylesheet">
+    <link href="./img/favicon.ico" rel="favicon">
     <!--<script src="path/to/js"></script>-->
 </head>
 <body>
     <header>
         <h1>Accueil</h1>
     </header>
-    <hr/>
     <div class="container">
         <nav class="menu">
             <ul>
@@ -22,12 +22,15 @@
         <article>
             <div>
                 <h3>Bonjour et bienvenue !</h3>
+                <img src="./img/random_pic.jpg" alt="Salle d'attente"/>
                 <p>Installez-vous, les sièges sont gratuits :)</p>
                 <p>Pas les boissons du distributeur pas contre</p>
                 <p><em>faut pas déconner</em></p>
             </div>
         </article>
     </div>
-    <footer></footer>
 </body>
+<footer>
+    <div>(c)2023 - Leane H</div>
+</footer>
 </html>
