--- a/WAMP/www/wd/SitePro/v1/projets.html
+++ b/WAMP/www/wd/SitePro/v1/projets.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-type">
-    <title>Mes projets tout beau</title>
+    <title>Mes projets tous beaux</title>
     <link href="css.css" type="text/css" rel="stylesheet">
+    <link href="./img/favicon.ico" rel="favicon">
     <!--<script src="path/to/js"></script>-->
 </head>
 <body>
     <header>
         <h1>Projets</h1>
     </header>
-    <hr/>
     <div class="container">
         <nav class="menu">
             <ul>
@@ -25,6 +25,8 @@
             </div>
         </article>
     </div>
-    <footer></footer>
 </body>
+<footer>
+    <div>(c)2023 - Leane H</div>
+</footer>
 </html>
