--- a/WAMP/www/wd/SitePro/v1/cv.html
+++ b/WAMP/www/wd/SitePro/v1/cv.html
@@ -4,13 +4,13 @@
     <meta content="text/html; charset=utf-8" http-equiv="Content-type">
     <title>Mon CV tout beau</title>
     <link href="css.css" type="text/css" rel="stylesheet">
+    <link href="./img/favicon.ico" rel="favicon">
     <!-- <script src="path/to/js"></script> -->
 </head>
 <body>
     <header>
         <h1>Mon CV</h1>
     </header>
-    <hr/>
     <div class="container">
         <nav class="menu">
             <ul>
@@ -27,6 +27,8 @@
             </div>
         </article>
     </div>
-    <footer></footer>
 </body>
+<footer>
+    <div>(c)2023 - Leane H</div>
+</footer>
 </html>
