--- a/WAMP/www/wd/TP5-JS/ex2/jscrud.html
+++ b/WAMP/www/wd/TP5-JS/ex2/jscrud.html
@@ -22,7 +22,7 @@
             padding: 0.1em 1em;
         }
         
-        th {
+        th:not(:last-child) {
             border-right: 1px solid black;
             font-weight: bold;
         }
@@ -48,10 +48,7 @@
         <thead>
             <tr>
                 <th scope="col">Nom</th>
-                <th scope="col">Prenom</th>
-                <th scope="col">Date de naissance</th>
-                <th scope="col">Aime le cours Web</th>
-                <th scope="col">Remarques</th>
+                <th scope="col">Mail</th>
                 <th scope="col" colspan="2">CRUD</th>
             </tr>
         </thead>
@@ -70,27 +67,9 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPrenom" class="col-sm-2 col-form-label">Prénom</label>
+            <label for="inputMail" class="col-sm-2 col-form-label">Mail</label>
             <div class="col-sm-3">
-                <input type="text" class="form-control" id="inputPrenom" >
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputNaissance" class="col-sm-2 col-form-label">Date de naissance</label>
-            <div class="col-sm-3">
-                <input type="text" class="form-control" id="inputNaissance" >
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputCours" class="col-sm-2 col-form-label">Aime le cours Web</label>
-            <div class="col-sm-3">
-                <input type="checkbox" class="form-control" id="inputCours" >
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputRmq" class="col-sm-2 col-form-label">Remarques</label>
-            <div class="col-sm-3">
-                <input type="text" class="form-control" id="inputRmq" >
+                <input type="text" class="form-control" id="inputMail" >
             </div>
         </div>
 
